[gd_scene load_steps=7 format=3 uid="uid://cmkjpxemr011h"]

[ext_resource type="Script" path="res://src/game/shop.gd" id="1_prcom"]
[ext_resource type="Texture2D" uid="uid://bm2hd7buvtals" path="res://assets/ui/play-button.svg" id="1_ybp7h"]

[sub_resource type="LabelSettings" id="LabelSettings_ii85x"]
font_size = 50
font_color = Color(1, 0.713726, 0.254902, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8ic7c"]
bg_color = Color(0.247406, 0.831738, 0.478495, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v0fql"]
bg_color = Color(0.16038, 0.526292, 0.300575, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r7h3h"]
bg_color = Color(0.228475, 0.754199, 0.434323, 1)

[node name="ShopUI" type="CanvasLayer"]
visible = false
script = ExtResource("1_prcom")

[node name="Score" type="Panel" parent="."]
offset_left = 296.0
offset_top = 61.0
offset_right = 1128.0
offset_bottom = 673.0

[node name="Button" type="Button" parent="Score"]
custom_minimum_size = Vector2(256, 256)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 20.0
offset_top = 170.0
offset_right = -556.0
offset_bottom = 426.0
grow_horizontal = 2

[node name="Label" type="Label" parent="Score/Button"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -85.0
offset_top = -69.0
offset_right = 85.0
grow_horizontal = 2
grow_vertical = 0
text = "3$"
label_settings = SubResource("LabelSettings_ii85x")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button2" type="Button" parent="Score"]
custom_minimum_size = Vector2(256, 256)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 289.0
offset_top = 170.0
offset_right = -287.0
offset_bottom = 426.0
grow_horizontal = 2

[node name="Label" type="Label" parent="Score/Button2"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -85.0
offset_top = -69.0
offset_right = 85.0
grow_horizontal = 2
grow_vertical = 0
text = "5$"
label_settings = SubResource("LabelSettings_ii85x")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button3" type="Button" parent="Score"]
custom_minimum_size = Vector2(256, 256)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 561.0
offset_top = 170.0
offset_right = -15.0
offset_bottom = 426.0
grow_horizontal = 2

[node name="Label" type="Label" parent="Score/Button3"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -85.0
offset_top = -69.0
offset_right = 85.0
grow_horizontal = 2
grow_vertical = 0
text = "7$"
label_settings = SubResource("LabelSettings_ii85x")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="Score"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -282.0
offset_top = 14.0
offset_right = 282.0
offset_bottom = 151.0
grow_horizontal = 2
text = "SHOP"
label_settings = SubResource("LabelSettings_ii85x")
horizontal_alignment = 1

[node name="Continue" type="Button" parent="Score"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 303.0
offset_top = 457.0
offset_right = -301.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/hover = SubResource("StyleBoxFlat_8ic7c")
theme_override_styles/pressed = SubResource("StyleBoxFlat_v0fql")
theme_override_styles/normal = SubResource("StyleBoxFlat_r7h3h")
icon = ExtResource("1_ybp7h")
icon_alignment = 1
expand_icon = true

[connection signal="pressed" from="Score/Continue" to="." method="_on_continue_pressed"]
